# dnest4-bilby

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/dnest4_bilby/: __init__.py  model.py  plugin.py
tests/: conftest.py  test_bilby_integration.py  test_model.py  test_plugin.py
