[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dnest4-bilby"
authors = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
    {name = "Michael J. Williams", email = "michael.williams@ligo.org"},
]
description = "Interface and plugin for using dnest4 in bilby"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby>=2.3.0",
    "dnest4",
    "numpy",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[project.entry-points."bilby.samplers"]
dnest4 = "dnest4_bilby.plugin:DNest4"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]
